Overflow issue fix attempt #3

--- a/slides.css
+++ b/slides.css
@@ -3,6 +3,9 @@
     left: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+}
+
+body{
     overflow-x: hidden;
 }
 
