--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     padding: 0;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
+}
+
+body{
     overflow-x: hidden;
 }
 
